[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/game/entity/enemy/base_enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/entity/enemy/frigate/assets/frigate.png" type="Texture" id=2]
[ext_resource path="res://scenes/game/entity/enemy/frigate/assets/frigate_light.png" type="Texture" id=3]
[ext_resource path="res://scenes/game/entity/player/assets/exhaust.png" type="Texture" id=4]
[ext_resource path="res://scenes/game/entity/player/assets/exhaust_flame.gdshader" type="Shader" id=5]
[ext_resource path="res://scenes/game/entity/enemy/frigate/frigate.gd" type="Script" id=6]
[ext_resource path="res://scenes/game/entity/effect/explosion/explosion_large.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/game/entity/effect/shadow.gd" type="Script" id=8]
[ext_resource path="res://scenes/game/entity/enemy/assets/enemy_gun_2.ogg" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/speed = 10.0
shader_param/amount = 0.2
shader_param/brightness = 1.0

[node name="Frigate" instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
collision_mask = 0
script = ExtResource( 6 )
health = 400
flashing_sprites = [ NodePath("Sprite") ]
activation_margin = 128.0
score_value = 150
alternative_explosion = ExtResource( 7 )
shoot_sound = ExtResource( 9 )
shoot_volume = -2.0

[node name="Shape" parent="." index="0"]
shape = SubResource( 1 )
disabled = true

[node name="Collision" type="CollisionPolygon2D" parent="." index="1"]
polygon = PoolVector2Array( -256, -112, -160, -112, 0, -80, 160, -112, 256, -112, 208, 80, 128, 144, 0, 176, -128, 144, -208, 80 )

[node name="Shadow" type="Sprite" parent="." index="2"]
modulate = Color( 0, 0, 0, 0.25098 )
position = Vector2( 0, 48 )
texture = ExtResource( 2 )
script = ExtResource( 8 )
reference_path = NodePath("..")

[node name="Sprite" parent="." index="3"]
texture = ExtResource( 2 )

[node name="LightLeft" type="Sprite" parent="." index="4"]
modulate = Color( 1.5, 0.57, 0.72, 1 )
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="LightRight" type="Sprite" parent="." index="5"]
modulate = Color( 1.5, 0.57, 0.72, 1 )
material = SubResource( 2 )
texture = ExtResource( 3 )
flip_h = true

[node name="Exhaust" type="Node2D" parent="." index="6"]
position = Vector2( -208, -188 )
rotation = -3.14159
scale = Vector2( 0.3, 0.3 )

[node name="ExhaustLeft" type="Sprite" parent="Exhaust" index="0"]
material = SubResource( 3 )
rotation = -7.10543e-15
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( 0, 48 )

[node name="ExhaustRight" type="Sprite" parent="Exhaust" index="1"]
material = SubResource( 3 )
position = Vector2( -1386.67, 0.00012207 )
rotation = -7.10543e-15
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( 0, 48 )

[node name="ExhaustMid" type="Sprite" parent="Exhaust" index="2"]
material = SubResource( 3 )
position = Vector2( -693.333, -113.333 )
rotation = -7.75138e-15
scale = Vector2( 1.83333, 1.83333 )
z_index = -1
texture = ExtResource( 4 )
offset = Vector2( 0, 48 )

[node name="ShootPosLeft" type="Position2D" parent="." index="7"]
position = Vector2( -160, 192 )

[node name="ShootPosRight" type="Position2D" parent="." index="8"]
position = Vector2( 160, 192 )

[node name="ShootTimer" type="Timer" parent="." index="9"]
wait_time = 0.75
autostart = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
